# tokenalign

./: Cargo.toml  LICENSE  package.json
.github/workflows/: release.yml
scripts/: check_youtube_api.py  extract_resume_text.py  extract_subtitles.py  extract_tax_jobs.js  extract_transcript.py  extract_video_info.py  extract_youtube_content.py  fetch_transcript.py  file_audit.py  file_guardian.py  get_transcript.py  install.sh  job-search-browser-version.py  job_search_cron.py  job_search_cron_wrapper.sh  package.json  sg-tax-job-browser-extraction.py  sg-tax-job-extract.js  sg-tax-job-extract.js.backup  sg-tax-job-extract.js.backup3  sg-tax-job-extractor.py  sg-tax-job-search-validated.py  simplified_job_search.py  start-crd.sh  sync_obsidian.sh  tax_job_analysis.py  test.sh  transcribe.py  updated_job_search.py
src/: billing.rs  dcr.rs  envoy.rs  lib.rs  main.rs  shd.rs  wasm_enclave.rs
tests/: integration_tests.rs
