[package]
name = "tokenalign"
version = "1.0.5"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
http = "1"
http-body-util = "0.1"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tiktoken-rs = "0.5"
machineid-rs = "0.1"
sha2 = "0.10"
futures-util = "0.3"

[[bin]]
name = "tokenalign"
path = "src/main.rs"
